# HAMR_Controller

./: IMU_call.cpp  can_decode  can_decode.cpp  can_enumerate.py  controller.py  controller_and_pose_log.csv  dd_pid.cpp  gimbal_log.csv  gimbal_log_20260409_203408.csv  gimbal_log_20260409_203741.csv  gimbal_log_20260409_203913.csv  gimbal_log_20260409_204710.csv  gimbal_log_20260409_205222.csv  gimbal_log_20260409_230739.csv  gimbal_log_20260409_231329.csv  gimbal_log_20260409_231811.csv  gimbal_log_20260409_232034.csv  notes.cpp  pid_logger.py  platformio.ini  tof_scan.cpp
CAN/: PCANBasic.cs  PCANBasic.def  PCANBasic.pas  PCANBasic.py  PCANBasic.vb  PCANBasicCLR.h  canfilter  canfilter.c  canreceive  canreceive.c  cantransmit  cantransmit.c  gimbal_can  gimbal_can.cpp  gimbal_pcan.cpp
CAN/__pycache__/: PCANBasic.cpython-312.pyc.2707195102464  gimbal_control.cpython-312.pyc.2555630828592
hamr_can/: pyvenv.cfg
src/: ekf_localization.h  gimbal_pid_page.h  imu_55.cpp  imu_55.h  imu_85.cpp  imu_85.h  main.cpp  odometry.h  webpage.h
test/ekf_tests/: CMakeLists.txt
test/ekf_tests/tests/: test_ekf.cpp  test_odometry.cpp  test_shims.cpp
test/ekf_tests/tests/arduino_shim/: Arduino.h  WiFi.h  WiFiUdp.h  esp32-hal-ledc.h
